added password control

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,13 @@
 </head>
 
 <body>
-    <input type="file" id="file" />
-    <div id="dropfile">
+    <div class="container">
+        <div id="dropfile">
+        </div>
+        <div class="input-field">
+            <input type="password" id="pw"/>
+            <label for="pw">Password</label>
+        </div>
     </div>
 </body>
 <footer>
