--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,26 @@
 
 <body>
     <div class="container">
-        <div id="dropfile">
+        <div id="dropfile" class="z-depth-5">
+            <div id="textwrapper">drop files here lol</div>
+            <div id="spinner">
+                <div class="preloader-wrapper active">
+                    <div class="spinner-layer spinner-red-only">
+                        <div class="circle-clipper left">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="input-field">
-            <input type="password" id="pw"/>
+            <input type="password" id="pw" />
             <label for="pw">Password</label>
         </div>
     </div>
