fixed sending filelist

--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,23 @@
 <html>
-
 <head>
     <title></title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/liststyles.css">
     <link rel="stylesheet" href="css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
-        <div id="dropfile" class="z-depth-5">
-            <div id="textwrapper">drop files here lol</div>
-            <div id="spinner">
-                <div class="preloader-wrapper active">
-                    <div class="spinner-layer spinner-red-only">
-                        <div class="circle-clipper left">
-                            <div class="circle"></div>
-                        </div>
-                        <div class="gap-patch">
-                            <div class="circle"></div>
-                        </div>
-                        <div class="circle-clipper right">
-                            <div class="circle"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="input-field">
-            <input type="password" id="pw" />
-            <label for="pw">Password</label>
+        <div id="list">
+            
         </div>
     </div>
 </body>
 <footer>
-    <script src="js/jquery-3.1.1.js"></script>
-    <script src="js/materialize.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="/js/jquery-3.1.1.js"></script>
+    <script src="/js/materialize.min.js"></script>
+    <script src="/js/listscript.js"></script>
 </footer>
 
 </html>
